更新emojie替换喵~

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <script src="js/petPhrase.js"></script>
+        <script src="js/emoticons.js"></script>
         <script src="js/options.js"></script>
         <script src="js/main.js"></script>
     </body>
